--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon /index.js", 
-    "start" : "node index.js"
+    "dev": "nodemon /index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
     "express": "^4.18.2",
+    "hbs": "^4.2.0",
     "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
