--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
