--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
+    "mssql": "^10.0.2",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
