--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mssql": "^10.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.3"
