--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "env": "^0.0.2",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
+    "msnodesqlv8": "^4.2.1",
     "mssql": "^10.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
